# repo-insight

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  chat.js  report.js  session.js
src/repo_insight/: __init__.py  cli.py  config.py  main.py
src/repo_insight/agents/: analysis_agent.py  graph.py  lead_agent.py  report_agent.py  search_agent.py  state.py
src/repo_insight/api/: models.py
src/repo_insight/api/routes/: chat.py  reports.py  sessions.py
src/repo_insight/llm/: provider.py
src/repo_insight/storage/: database.py  models.py  session_store.py
src/repo_insight/tools/: github_deep_analysis.py  github_readme.py  github_search.py  report_generator.py
