[project]
name = "repo-insight"
version = "0.1.0"
description = "AI-powered GitHub project discovery and analysis with multi-agent chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.4",
    "langchain-openai>=0.2.0,<0.4",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx",
    "aiosqlite",
    "pydantic-settings",
    "python-dotenv",
    "rich",
    "sse-starlette",
    "markdown>=3.10.2",
]

[project.scripts]
repo-insight = "repo_insight.main:main"
repo-insight-cli = "repo_insight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_insight"]
